[tool.poetry]
name = "popular-algorithms"
version = "0.1.0"
description = ""
authors = ["Yuki Nagae <yuki.nagae1130@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.6"
flake8 = "^3.7"
autopep8 = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
